fix nav collapse

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -33,6 +33,9 @@
 .collapsed {
     display: flex;
     list-style: none;
+    li:not(:first-child) {
+        padding-left: 25px;
+      }
     a {
         color: #FFFFFF;
     }
@@ -48,7 +51,7 @@
     width: 100%;
     
     li:not(:first-child) {
-      border-top: 1px solid #e9e9e9;
+      border-top: 1px solid #FFFFFF;
     }
   
     li {
@@ -69,10 +72,10 @@
     }
   
     .nav_content {
-      background: #ffffff;
+      background: #F0F2F2;
       margin: 0 40px;
-      border-top: 1px solid #e9e9e9;
-      border-bottom: 1px solid #e9e9e9;
+      border-top: 1px solid #FFFFFF;
+      border-bottom: 1px solid #FFFFFF;
     }
   
     @media screen and (min-width: 992px) {
